--- a/web/Success.html
+++ b/web/Success.html
@@ -5,6 +5,6 @@
     <title>SuccessfullyRegister</title>
 </head>
 <body>
-<h1 style="margin: 10% 32%">Successfully Register!</h1>
+<h1>Successfully Register!</h1>
 </body>
 </html>
